Changelog: - fixed license positioning in notes - fixed cards alignment

--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ footer{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    align-items: flex-start;
+    align-items: space-evenly;
 }
 
 .card {
